# ubuntu-image-info

./: .gitignore  CMakeLists.txt  README.md
include/: ubuntu_image_info.h
src/: main.cpp  ubuntu_image_info.cpp
